Fix a little spacing thing

--- a/css/include/list.styl
+++ b/css/include/list.styl
@@ -23,7 +23,7 @@
     
 #task-submit
   background-repeat no-repeat
-  padding 22px 30px 23px
+  padding 21px 30px 20px
   background-image url('../img/add-background-icons.svg')
   transition background-position 150ms ease-in-out
     
